// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db Get FlightLog tests getFlightLog return existing flight 1`] = `
{
  "acTotalFlightTime": "5230:10",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-P28",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 81,
  "ajlbRowNo": 1,
  "ajlbSeqNo": 4,
  "ajlbTotalLandings": 3,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Jukka1",
  "billingRemarks": "N/A",
  "blockMins": 155,
  "blockTime": "02:35",
  "createdAt": Any<String>,
  "createdBy": "Jukka1",
  "crew2LastName": "Hämäläinen",
  "crew2MemberId": "Pekka1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": "da40tndra",
  "flightMins": 110,
  "flightTime": "01:50",
  "flightType": "PRIVATE",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 55,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 75,
  "invoiceNumber": "INV003",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1741094400",
  "landingTimeUtc": "2025-03-04T13:20:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 60,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 3,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1741086000",
  "offBlockTimeUtc": "2025-03-04T11:00:00.000Z",
  "oilUpliftLitres": 1.2,
  "onBlockTimeEpoch": "1741095300",
  "onBlockTimeUtc": "2025-03-04T13:35:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "Cargo delivery",
  "personsOnBoard": 4,
  "picLastName": "Nieminen",
  "picMemberId": "Jukka1",
  "picRole": "PIC",
  "privOrComFlight": "C",
  "status": "VALIDATED",
  "takeoffTimeEpoch": "1741087800",
  "takeoffTimeUtc": "2025-03-04T11:30:00.000Z",
  "totalTimeInService": 1.74,
  "updatedAt": Any<String>,
  "updatedBy": "Jukka1",
  "validationRemarks": null,
}
`;

exports[`Db insert tests insertFlightLog inserts a new flight log to the db, querying using returned flight id returns the row, row can be deleted using flight id 1`] = `
{
  "acTotalFlightTime": "11677:25",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 502,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 3,
  "ajlbTotalLandings": null,
  "arrivalAirport": "EFVA",
  "billableMemberId": "Matti1",
  "billingRemarks": "Test flight",
  "blockMins": 75,
  "blockTime": "01:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2LastName": "Hämäläinen",
  "crew2MemberId": "Pekka1",
  "crew2Role": null,
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "entryErrorFee": false,
  "entryErrorFeeAppliedByMemberId": null,
  "flightId": Any<String>,
  "flightMins": 60,
  "flightTime": "01:00",
  "flightType": "DTO",
  "fuelRemainingLitres": 22,
  "fuelUpliftLitres": 100,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 0,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741583700",
  "landingTimeUtc": "2025-03-10T05:15:00.000Z",
  "minBillableExceptionApprovedByMemberId": null,
  "minBillableExceptionReason": null,
  "nightFlyingMins": 0,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1741579500",
  "offBlockTimeUtc": "2025-03-10T04:05:00.000Z",
  "oilUpliftLitres": 5,
  "onBlockTimeEpoch": "1741584000",
  "onBlockTimeUtc": "2025-03-10T05:20:00.000Z",
  "partiallyBillableFlight": false,
  "personalRemarks": "No remarks",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "picMemberId": "Liisa1",
  "picRole": "FE",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1741580100",
  "takeoffTimeUtc": "2025-03-10T04:15:00.000Z",
  "totalTimeInService": 1023.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
  "validationRemarks": null,
}
`;

exports[`Db query FlightLog tests getFlightLogTotals returns totals for all ac 1`] = `
[
  {
    "acTotalFlightMins": 800180,
    "acTotalFlightTime": "13336:20",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-IHQ",
    "ajlbSeqNo": 3,
  },
  {
    "acTotalFlightMins": 315935,
    "acTotalFlightTime": "5265:35",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-P28",
    "ajlbSeqNo": 4,
  },
  {
    "acTotalFlightMins": 703390,
    "acTotalFlightTime": "11723:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbSeqNo": 3,
  },
]
`;

exports[`Db query FlightLog tests getFlightLogTotals returns totals for single ac 1`] = `
[
  {
    "acTotalFlightMins": 703390,
    "acTotalFlightTime": "11723:10",
    "acTotalLandings": 0,
    "aircraftRegistration": "OH-STL",
    "ajlbSeqNo": 3,
  },
]
`;

exports[`Db query FlightLog tests getFlightLogs between start and end date should match snapshot 1`] = `
{
  "acTotalFlightMins": 313810,
  "acTotalFlightTime": "5230:10",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-P28",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 1,
  "ajlbSeqNo": 4,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Jukka1",
  "blockTime": "02:35",
  "crew2LastName": "Hämäläinen",
  "departureAirport": "EFHK",
  "flightId": "da40tndra",
  "flightTime": "01:50",
  "flightType": "PRIVATE",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 55,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 75,
  "invoiceNumber": "INV003",
  "landingTimeUtc": "2025-03-04T13:20:00.000Z",
  "nightFlyingMins": 60,
  "numberOfLandings": 3,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-04T11:00:00.000Z",
  "oilUpliftLitres": 1.2,
  "onBlockTimeUtc": "2025-03-04T13:35:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Nieminen",
  "status": "VALIDATED",
  "takeoffTimeUtc": "2025-03-04T11:30:00.000Z",
  "totalTimeInService": 1.74,
}
`;

exports[`Db query FlightLog tests getFlightLogs for end date should match snapshot 1`] = `
{
  "acTotalFlightMins": 90,
  "acTotalFlightTime": "1:30",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-IHQ",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 1,
  "ajlbSeqNo": 10,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "01:40",
  "crew2LastName": null,
  "departureAirport": "EFHK",
  "flightId": "yoy_001",
  "flightTime": "01:30",
  "flightType": "PRIVATE",
  "fuelRemainingLitres": 25,
  "fuelUpliftLitres": 30,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 0,
  "invoiceNumber": null,
  "landingTimeUtc": "2022-01-15T10:35:00.000Z",
  "nightFlyingMins": 0,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2022-01-15T09:00:00.000Z",
  "oilUpliftLitres": 0,
  "onBlockTimeUtc": "2022-01-15T10:40:00.000Z",
  "personsOnBoard": 1,
  "picLastName": "Virtanen",
  "status": "VALIDATED",
  "takeoffTimeUtc": "2022-01-15T09:05:00.000Z",
  "totalTimeInService": 1.5,
}
`;

exports[`Db query FlightLog tests getFlightLogs for specific member id should match snapshot 1`] = `
{
  "limit": 50,
  "logs": [
    {
      "acTotalFlightMins": 286805,
      "acTotalFlightTime": "4780:05",
      "acTotalLandings": 0,
      "aircraftRegistration": "OH-STL",
      "ajlbBlankRowsBefore": 0,
      "ajlbRowNo": 1,
      "ajlbSeqNo": 2,
      "arrivalAirport": "EFTU",
      "billableMemberId": "Sanna1",
      "blockTime": "02:05",
      "crew2LastName": "Seppälä",
      "departureAirport": "EFHK",
      "flightId": "eject",
      "flightTime": "01:45",
      "flightType": "XC",
      "fuelRemainingLitres": 60,
      "fuelUpliftLitres": 45,
      "incidentOrObservations": null,
      "instrumentFlyingMins": 60,
      "invoiceNumber": null,
      "landingTimeUtc": "2024-03-12T01:00:00.000Z",
      "nightFlyingMins": 115,
      "numberOfLandings": 1,
      "numberOfNightLandings": 0,
      "offBlockTimeUtc": "2024-03-11T23:05:00.000Z",
      "oilUpliftLitres": 1,
      "onBlockTimeUtc": "2024-03-12T01:10:00.000Z",
      "personsOnBoard": 2,
      "picLastName": "Koskinen",
      "status": "NEW",
      "takeoffTimeUtc": "2024-03-11T23:15:00.000Z",
      "totalTimeInService": 1.92,
    },
  ],
  "page": 1,
  "pageStartFlightMins": null,
  "pages": 1,
  "rows": 1,
}
`;

exports[`Db query FlightLog tests getFlightLogs for start date should match snapshot 1`] = `
{
  "acTotalFlightMins": 315625,
  "acTotalFlightTime": "5260:25",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-P28",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 6,
  "ajlbSeqNo": 4,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Risto1",
  "blockTime": "01:50",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "rs1nr02a",
  "flightTime": "01:30",
  "flightType": "SCHOOL",
  "fuelRemainingLitres": 14,
  "fuelUpliftLitres": 22,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 0,
  "invoiceNumber": null,
  "landingTimeUtc": "2026-03-13T22:40:00.000Z",
  "nightFlyingMins": 90,
  "numberOfLandings": 5,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2026-03-13T21:00:00.000Z",
  "oilUpliftLitres": null,
  "onBlockTimeUtc": "2026-03-13T22:50:00.000Z",
  "personsOnBoard": 2,
  "picLastName": "Järvinen",
  "status": "NEW",
  "takeoffTimeUtc": "2026-03-13T21:10:00.000Z",
  "totalTimeInService": null,
}
`;

exports[`Db query FlightLog tests getFlightLogs with Captain and copilot should return filtered logs 1`] = `
{
  "acTotalFlightMins": 286910,
  "acTotalFlightTime": "4781:50",
  "acTotalLandings": 0,
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "SCHOOL",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": "Engine stopped briefly",
  "instrumentFlyingMins": 45,
  "invoiceNumber": null,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "NEW",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;
